--- a/web2.csproj
+++ b/web2.csproj
@@ -139,6 +139,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
+    <Compile Include="Areas\Admin\Data\DanhSachHocViencs.cs" />
+    <Compile Include="Areas\Admin\Data\DataAccess.cs" />
     <Compile Include="Areas\Admin\Data\HocVienManage.cs" />
     <Compile Include="Areas\Student\Controllers\HomeStudentController.cs" />
     <Compile Include="Areas\Student\StudentAreaRegistration.cs" />
@@ -280,6 +282,8 @@
     <Content Include="Areas\Teacher\Views\HomeTeacher\Manage_Classes.cshtml" />
     <Content Include="Areas\Teacher\Views\HomeTeacher\Manage_Document.cshtml" />
     <Content Include="Areas\Teacher\Views\HomeTeacher\Manage_Schedule.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\Edit_Student_Infor.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\Add_Student.cshtml" />
     <None Include="Models\.editorconfig" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
