--- a/web2.csproj
+++ b/web2.csproj
@@ -300,6 +300,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\popper.js" />
+    <Content Include="source\person1.png" />
+    <Content Include="source\section5a.png" />
+    <Content Include="Views\Home\style\Index.js" />
     <Content Include="Views\Home\style\_layout.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
