--- a/web2.csproj
+++ b/web2.csproj
@@ -305,6 +305,9 @@
     <Content Include="Areas\Admin\Views\HomeAdmin\Edit_Class_Infor.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Add_Course.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Edit_Course_Infor.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\Manage_Invoice.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\Add_Invoice.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\Edit_Invoice_Infor.cshtml" />
     <None Include="Models\.editorconfig" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
