update manage schedule

--- a/web2.csproj
+++ b/web2.csproj
@@ -308,6 +308,7 @@
     <Content Include="Areas\Admin\Views\HomeAdmin\Manage_Invoice.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Add_Invoice.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Edit_Invoice_Infor.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\Manage_Schedule.cshtml" />
     <None Include="Models\.editorconfig" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
