--- a/web2.csproj
+++ b/web2.csproj
@@ -139,6 +139,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
+    <Compile Include="Areas\Admin\Data\ChartView.cs" />
     <Compile Include="Areas\Admin\Data\DanhSachGiaoVien.cs" />
     <Compile Include="Areas\Admin\Data\GiaoVienManage.cs" />
     <Compile Include="Areas\Admin\Data\DanhSachHocViencs.cs" />
@@ -226,6 +227,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Scripts\chart.js" />
+    <Content Include="Areas\Admin\Scripts\adminSite.js" />
+    <Content Include="Areas\Admin\Style\adminSite.css" />
     <Content Include="Content\adminSite.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
