update areas admin

--- a/web2.csproj
+++ b/web2.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
     <Compile Include="Areas\Admin\Data\ChartView.cs" />
     <Compile Include="Areas\Admin\Data\DanhSachGiaoVien.cs" />
+    <Compile Include="Areas\Admin\Data\DanhSachLopHoc.cs" />
     <Compile Include="Areas\Admin\Data\GiaoVienManage.cs" />
     <Compile Include="Areas\Admin\Data\DanhSachHocViencs.cs" />
     <Compile Include="Areas\Admin\Data\DataAccess.cs" />
@@ -311,6 +312,7 @@
     <Content Include="Areas\Admin\Views\HomeAdmin\Add_Invoice.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Edit_Invoice_Infor.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Manage_Schedule.cshtml" />
+    <Content Include="Areas\Teacher\Views\HomeTeacher\MyClass.cshtml" />
     <None Include="Models\.editorconfig" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
