--- a/web2.csproj
+++ b/web2.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Areas\Student\Data\KhoaHocManage.cs" />
     <Compile Include="Areas\Student\Controllers\HomeStudentController.cs" />
     <Compile Include="Areas\Student\Data\DataAccessStudent.cs" />
+    <Compile Include="Areas\Student\Data\LopHocManage.cs" />
     <Compile Include="Areas\Student\StudentAreaRegistration.cs" />
     <Compile Include="Areas\Teacher\Controllers\HomeTeacherController.cs" />
     <Compile Include="Areas\Teacher\TeacherAreaRegistration.cs" />
@@ -172,6 +173,14 @@
     <Content Include="Areas\Admin\Views\HomeAdmin\Index.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Manage_Student.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\Manage_Teacher.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\AboutStudent.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\ContactStudent.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\CourseStudent.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\indexHomeStudent.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\ScheduleStudent.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\settingAccount.cshtml" />
+    <Content Include="Areas\Student\Views\HomeStudent\StudyStudent.cshtml" />
+    <Content Include="Areas\Student\Views\Shared\_LayoutStudent.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -207,11 +216,9 @@
     <Content Include="Views\Home\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Models\" />
     <Folder Include="App_Data\App_LocalResources\" />
     <Folder Include="Areas\Teacher\Data\" />
+    <Folder Include="Models\" />
     <Folder Include="Views\Adminshow\" />
     <Folder Include="Views\Default\" />
   </ItemGroup>
